1번째 박스추가

--- a/web/git_test/index.html
+++ b/web/git_test/index.html
@@ -8,6 +8,8 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    test
+    <div class="box1">
+        <h1>Hello</h1>
+    </div>
 </body>
 </html>
