--- a/web/git_test/index.html
+++ b/web/git_test/index.html
@@ -11,5 +11,8 @@
     <div class="box1">
         <h1>Hello</h1>
     </div>
+    <div class="box2">
+        <h1>Hello</h1>
+    </div>
 </body>
 </html>
